# schedule-everything

./: .gitignore  .gitmodules  AGENTS.md  AGNETS.md  CLAUDE.md  CNAME  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  LICENSE  README.md  README_zh.md  contributing.md  install.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.agents/skills/add-cli-feature/: SKILL.md
.agents/skills/modify-cli-feature/: SKILL.md
.agents/skills/update-docs/: SKILL.md
.github/workflows/: cli-tests.yml  deploy-docs.yml  logic-tests.yml  publish.yml  release-desktop-dmg.yml  tests.yml
config/: habits_template.toml  llm.toml  profile.md  settings_template.toml  week_schedule_template.toml
config/user_config_0/: habits_template.toml  profile.md  settings_template.toml
desktop/: index.html
desktop/src/: api.ts  main.ts  render.test.ts  render.ts  styles.css  types.ts
docs/prompt/: README.md  config_gen_prompt_en.md  config_gen_prompt_zh.md
documentation/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation/docs/: installation.md  intro.md  quick-start.md
documentation/src/pages/: index.tsx
plans/: habit_tracking_plan.md
schedule_management/: .gitignore  README.md  pyproject.toml  reminder_macos.py  requirements-test.txt  schedule.toml  schedule2.toml  schedule_template.toml  settings_template.toml  test.py  week_schedule_template.toml
schedule_management/tests/: README.md  conftest.py  run_tests.py  test_reminder_macos.py
scripts/: build-gui-sidecar.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/schedule_management/: .gitignore  README.md  __init__.py  cli.py  config.py  config_layout.py  i18n.py  install_config_wizard.py  platform.py  popups.py  reminder.py  reminder_macos.py  report.py  runner.py  synced_schedule.py  time_utils.py  utils.py  visualizer.py
tests/: conftest.py  test_cli_commands.py  test_config_layout.py  test_deadline_management.py  test_gui_bridge.py  test_gui_services.py  test_gui_sync_helpers.py  test_habit_prompt.py  test_i18n.py  test_install_config_wizard.py  test_mode.py  test_platform_utils.py  test_reminder_logic.py  test_report_generation.py  test_setup_command.py  verify_urgency_repro.py
tests/config/: even_weeks.toml  settings.toml  test_tasks_log.json
tests/temp_config/: settings.toml
(+44 files in other folders)
