[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "schedule-management"
version = "0.2.2"
description = "A TOML based scheduling tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
reminder = "schedule_management.reminder:main"

[tool.setuptools]
package-dir = {"" = "src"}