[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "schedule-management"
version = "0.8.0"
description = "A TOML based scheduling tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "shtab>=1.8.0",
    "anthropic",
    "google-genai>=1.31.0",
    "openai",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
rmd = "schedule_management.reminder:main"
reminder = "schedule_management.reminder:main"
