[package]
name = "schedule-everything-desktop"
version = "0.1.0"
description = "Schedule Everything daily command center"
authors = ["Schedule Everything"]
license = "MIT"
repository = "https://github.com/sergiudm/schedule-everything"
edition = "2021"

[lib]
name = "schedule_everything_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
